# aircraft-diff

./: Cargo.toml
resource/: engines.new.cfg  engines.old.cfg
src/: main.rs
