[package]
name = "aircraft-diff"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"
description = """
A program for comparing two package for Microsoft Flight Simulator 2020.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.6.0"
clap = "3.0.0-beta.2"
hashbrown = "0.9.1"
walkdir = "2.3.1"
